<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".launchmode.controller.LaunchControllerActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/standard_startup_literal"
                    android:onClick="onStandardStartupButtonClicked" />

            <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/single_top_startup_literal"
                    android:onClick="onSingleTopStartupButtonClicked" />

            <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/single_task_startup_literal"
                    android:onClick="onSingleTaskStartupButtonClicked" />

            <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/single_Instance_startup_literal"
                    android:onClick="onSingleInstanceStartupButtonClicked" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>